# ComfyUI-Depthflow-Nodes

./: .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
example_workflows/: depthflow_example.json  depthflow_showcase_v2_1.json
src/: base_flex.py  custom_state.py  depthflow.py
src/effects/: depthflow_effects.py
src/motion/: depthflow_motion_base.py  depthflow_motion_components.py  depthflow_motion_presets.py
src/shaders/: depthflow.glsl
src/utils/: color_utils.py
tests/: test_color_utils.py
