[project]
name = "comfyui-depthflow-nodes"
description = "Implementation of DepthFlow nodes for ComfyUI, adds a 2.5D parallax effect to images and videos. Compatible with Ryan's Flex system."
version = "0.0.1"
license = {file = "LICENSE"}
dependencies = ["numpy", "torch", "pydantic", "depthflow"]

[project.urls]
Repository = "https://github.com/akatz-ai/ComfyUI-Depthflow-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "akatz"
DisplayName = "ComfyUI-Depthflow-Nodes"
Icon = "https://i.imgur.com/aiqQI7U.png"
